--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -1,7 +1,8 @@
 :root {
     --white: #fff;
     --black: #000;
-    --antarctic-blue: #2c3d63
+    --antarctic-blue: #2c3d63;
+    --blue-birds: #0096d1;
 }
 
 /* General */
@@ -24,7 +25,7 @@ body {
 
 /* Navigation Bar */
 .navbar {
-    background: var(--antarctic-blue);
+    background: var(--blue-birds);
     color: var(--white);
     /* position: fixed; */
     top: 0;
