css for footer by stefanos

--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -3,6 +3,8 @@
     --black: #000;
     --antarctic-blue: #2c3d63;
     --blue-birds: #0096d1;
+    --bright-yellow: #fbdb14;
+    --white-lie: #dededc
 }
 
 /* General */
@@ -53,6 +55,41 @@ body {
 
 .page-menu a {
     color: var(--white);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+/* Footer */
+footer {
+    padding: 10px;
+    background-color: var(--white-lie);
+    color: var(--black);
+    /* text-decoration:underline;
+    top: 0;
+    z-index: 1; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+}
+
+.social {
+    width: 80%;
+}
+
+.social ul {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.social li {
+    list-style: none;
+}
+
+.social a {
+    color: var(--blue-birds);
     text-decoration: none;
     font-weight: bold;
 }
