--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -13,6 +13,8 @@
 
 body {
     color: var(--black);
+    background-color: ghostwhite;
+    font-family: Arial, Helvetica, sans-serif;
     /* background: var(--white); */
     /* font-family: 'Ubuntu', sans-serif; */
     height: 100vh;
@@ -22,7 +24,7 @@ body {
     width: 100%;
     height: fit-content;
 }
-
+/* na kanoyme to # koympi, kai na baloyme dipla logo san background img*/   
 /* Navigation Bar */
 .navbar {
     background: var(--blue-birds);
@@ -56,3 +58,14 @@ body {
     text-decoration: none;
     font-weight: bold;
 }
+
+a:link { /* unvisited link*/
+    color:blue;
+}
+a:visited { /* visited link*/
+    color:red;
+}
+a:active { /* current link*/
+    color: purple;
+}
+    
