--- a/Exercise2/css/generally_appliable.css
+++ b/Exercise2/css/generally_appliable.css
@@ -21,6 +21,11 @@
     text-align: left;
 }
 
+.page-icon img{
+    width: 20%;
+    height: auto;
+}
+
 .course-list{
     width: 75%;
     padding: 20px;
@@ -61,6 +66,6 @@ height:400px;
     text-align: center;
 }
 
-.course_bottom ul{
-
+.course-bottom ul{
+ display: flex;
 }
