grid completed on topics+courses

--- a/Exercise2/css/generally_appliable.css
+++ b/Exercise2/css/generally_appliable.css
@@ -1,71 +1,4 @@
-/* Footer general*/
-:root {
-    --white: #fff;
-    --black: #000;
-    --blue-birds: #0096d1;
-    --bright-yellow: #fbdb14;
-}
 
-.sidebar-box {
-
-}
-.sidebar{
-    
-    margin-left: 50px;
-    margin-right: 20px;
-    /*background-color: #fbdb14;*/
-
-}
-.sidebar li{
-    font-size: larger;
-    text-align: left;
-}
-
-.page-icon img{
-    width: 20%;
-    height: auto;
-}
-
-.course-list{
-    width: 75%;
-    padding: 20px;
-    margin: auto;
-}
-
-.course{ /*creating box*/
-    margin-bottom: 50px;
-   
+.wrapper{  
     display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    border: 1px solid black;
-    border-width: 3px;
-}
-
-.course-top{    /*gridding+alligns*/
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-    text-align: center;
-}
-
-.course-left{ /*text of the course sizing and general rules*/
-    font-family: Arial, Helvetica, sans-serif;
-    grid-column-start: 1;
-    
-}
-
-.course-right img {
-width:400px;
-height:400px;
-
-}
-.cost{
-    font-weight: bold;
-    text-align: center;
-}
-
-.course-bottom ul{
- display: flex;
 }
