--- a/Exercise2/css/grid.css
+++ b/Exercise2/css/grid.css
@@ -1,3 +1,67 @@
+
+/*GENERAL RULES*/  
 .wrapper{ /* creates full grid*/
     display: grid;
+}
+
+
+/*COURSE RULES*/
+.course-right img {
+    width:100%;
+    height:100%;
+}
+.course-container{
+    display: grid;
+    grid-template-columns: 1200px 300px;
+    grid-auto-rows: minmax(200px, auto);
+    column-gap: 10px;
+}
+.about{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+.sidebar-box{
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+.course-list{
+    grid-row-start: 2;
+    display: grid;
+    margin-left: 5vw;
+    margin-right: 1vw;
+}
+.course{
+    /*margin-bottom: 50px;*/
+    display: flex;
+    flex-direction: column;
+    /*flex-wrap: wrap;*/
+    align-items: center;
+}
+.course-top{
+    order: 1;
+    text-align: flex left;
+}
+.course-middle{
+    order:2;
+    display: flex;
+    flex-direction: row;
+}
+.course-right{
+    order: 2;
+    width: 30%;
+}
+.course-left{
+    order:1;
+    width: 70%;
+}
+.course-bottom{
+    order: 3;
+    width: 100%;
+}
+.course-bottom ol{
+   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: left;
 }
