--- a/Exercise2/css/grid.css
+++ b/Exercise2/css/grid.css
@@ -8,24 +8,19 @@
 /*COURSE RULES*/
 .course-right img {
     width:100%;
-    height:100%;
 }
+
 .course-container{
     display: grid;
-    grid-template-columns: 1200px 300px;
+    grid-template-columns: 4fr 1fr;
     grid-auto-rows: minmax(200px, auto);
-    column-gap: 10px;
+    column-gap: 1%;
 }
-.about{
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.sidebar-box{
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
-.course-list{
-    grid-row-start: 2;
+
+
+
+.course-list {
+    grid-row-start: 1;
     display: grid;
     margin-left: 5vw;
     margin-right: 1vw;
@@ -65,4 +60,3 @@
     justify-content: space-around;
     align-items: left;
 }
-
