--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -305,6 +305,21 @@ button:hover{
     color: var(--white);
 }
 
+.about-ml {
+    background: url(../img/ml-banner.jpg) no-repeat center center/cover;
+    color: var(--white);
+}
+
+.about-ds {
+    background: url(../img/ds-banner.jpg) no-repeat center center/cover;
+    color: var(--white);
+}
+
+.about-web {
+    background: url(../img/web-banner.jpg) no-repeat center center/cover;
+    color: var(--white);
+}
+
 /* Topic Banners */ 
 .banner-topic .banner-right img {
     margin: 10%;
@@ -326,6 +341,12 @@ button:hover{
 }
 
 /* Biography */
+.navbuttons a {
+    color: var(--white);
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .bio {
     width: 60%;
     border-radius: 2%;
@@ -364,4 +385,95 @@ button:hover{
 
 .bio-comp ul, .bio-comp ol {
     list-style: none;
+}
+
+/* Courses */
+.course {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin: 2%;
+    padding: 2%;
+    background: var(--white);
+    box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.course:hover{
+    box-shadow: 0 5px 10px 0px rgba(0,0,0,0.5);
+}
+
+.course > * {
+    margin-bottom: 2%;
+}
+
+.course-top {
+    order: 1;
+    width: 100%;
+}
+
+.course-middle {
+    order: 2;
+    display: flex;
+    flex-direction: row;
+}
+
+.course-left {
+    order: 1;
+    width: 70%;
+    padding-right: 5%;
+    display: flex;
+    flex-direction: column;
+}
+
+.course-left > * {
+    margin-bottom: 2%;
+}
+
+.course-right {
+    order: 2;
+    width: 30%;
+    padding: 0 5%;
+}
+
+.course-right img {
+    width: 100%;
+}
+
+.course-bottom {
+    order: 3;
+    width: 100%;
+}
+
+.course-bottom h3 {
+    margin-bottom: 1%;
+}
+
+.course-bottom ol {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin: 0 2%;
+}
+
+.course-bottom li {
+    padding-bottom: 1%;
+}
+
+.sidebar-box {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    margin: 15% 0;
+}
+
+.sidebar nav > * {
+    margin-bottom: 5%;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar li {
+    margin-bottom: 5%;
 }
