--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -3,6 +3,8 @@
     --black: #000;
     --antarctic-blue: #2c3d63;
     --blue-birds: #0096d1;
+    --blue-back:#cfecf5;
+    --golden:#f49f1c;
     --white-lie: #dededc;
     --white-smoke: #f4f4f4;
 }
@@ -15,7 +17,7 @@
 
 body {
     color: var(--black);
-    background-color: var(--white-smoke);
+    background-color: var(--blue-back);
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
     overflow-x: hidden;
@@ -43,8 +45,8 @@ a:active { /* current link*/
 
 /* Navigation Bar */
 .navbar {
-    background: var(--blue-birds);
-    color: var(--white);
+    background: navy;
+    color: var(--golden);
     top: 0;
     z-index: 1;
     display: flex;
@@ -77,7 +79,7 @@ a:active { /* current link*/
 }
 
 .page-menu a {
-    color: var(--white);
+    color: var(--golden);
     text-decoration: none;
 }
 
@@ -89,7 +91,7 @@ a.active {
 /* Footer */
 footer {
     padding: 10px;
-    background-color: var(--white-lie);
+    background-color: var(--golden);
     color: var(--black);
     display: flex;
     justify-content: space-around;
@@ -124,7 +126,8 @@ footer {
     /* justify-content: space-around; */
     align-items: center;
     width: 90%;
-    background: var(--white);
+    /* background: var(--white); */
+    background: #fff7ec;
     box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
@@ -394,7 +397,8 @@ button:hover{
     align-items: left;
     margin: 2%;
     padding: 2%;
-    background: var(--white);
+    /* background: var(--white); */
+    background: #fff7ec;
     box-shadow: 0 5px 10px 0px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
@@ -461,11 +465,20 @@ button:hover{
 .sidebar-box {
     grid-column-start: 2;
     grid-column-end: 3;
-    margin: 15% 0;
+    margin: 15% 0; 
+    
+}
+.sidebar{
+    background-color: var(--golden);
+    padding:2% ;
+    border: 2px solid var(--golden);
+    border-radius: 1em;
+
 }
 
 .sidebar nav > * {
     margin-bottom: 5%;
+   
 }
 
 .sidebar ul {
