--- a/Exercise2/css/style.css
+++ b/Exercise2/css/style.css
@@ -492,3 +492,86 @@ button:hover{
 .course-bottom li{
     padding:2%;
 }
+
+/* Large devices */
+@media screen and (max-width: 992px) {
+
+}
+
+/* Medium devices */
+@media screen and (max-width: 768px) {
+
+}
+
+/* Extra small devices */
+@media only screen and (max-width: 600px) {
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .page-icon {
+        width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .page-menu {
+        width: 80%;
+    }
+
+    .social ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .banner {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .promo-banner .banner-left h2 {
+        margin: 2%;
+        font-size: 1rem;
+    }
+
+    .promo-banner .banner-left p {
+        margin: 2% 2% 8% 2%;
+        font-size: 0.7rem;
+    }
+
+    .section-title h2 {
+        font-size: 1.5rem;
+    }
+
+    .search form {
+        width: 80%;
+    }
+
+    .info-banner .banner-left h2 {
+        font-size: 1.5rem;
+    }   
+
+    .info-banner .banner-left dt {
+        font-size: 1.2rem;
+    }
+
+    .info-banner .banner-left p {
+        font-size: .9rem;
+    }
+
+    .bio-header {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .bio-header img {
+        width: 100%;
+        border-radius: 2%;
+    }
+}
