--- a/Exercise5/css/ga.css
+++ b/Exercise5/css/ga.css
@@ -60,7 +60,15 @@ input[type=radio]{
     margin-left: 5%;
 }
 
+#coll-label{
+    margin-right: 5%;
+}
 
 #country{
     width:30%;
+}
+
+#sub-button{
+    width: 20%;
+    
 }
